# pleco

./: .gitignore  Cargo.toml  go.mod  go.sum  main.go
internal/colours/: colours.go
internal/file_handler/: file_handler.go
internal/list/: list.go
src/: args.rs  main.rs
