[package]
name = "pleco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
glob = "0.3.1"
mime = "0.3.17"
mime_guess = "2.0.4"
tabwriter = "1.4.0"

[dev-dependencies]
tempfile = "3.9.0"
